# Musek

./: .gitignore  1.diff  README.md  meson.build
Musek/: player  ui.c  ui_callbacks.c  ui_setup.c
data/: meson.build  musek.desktop
src/: artist_image_fetch.c  library.c  main.c  meson.build  playback.c  player.h  scanner.c  ui.h  ui_albumart.c  ui_callbacks.c  ui_internal.h  ui_populate.c  ui_settings.c  ui_setup.c
